# SmartHome_CoreApplication

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_and_run_coverage.sh  main.c
doc/: Documentation.ods  doxyfile
ext_lib/: CMakeLists.txt  LinkerScript.ld  startup_stm32.s
ext_lib/CMSIS/stubs/: stm32_stub.h
ext_lib/CMSIS/stubs/core/: core_cm4.h  core_cmFunc.h  core_cmInstr.h
ext_lib/CMSIS/stubs/device/: stm32f4xx.c  stm32f4xx.h
pcb/main_board/: fp-info-cache  main_board-cache.lib  main_board.kicad_pcb  main_board.kicad_pcb-bak  main_board.net  main_board.pro  main_board.sch  main_board.sch-bak  project_symbols.bck  project_symbols.dcm  project_symbols.lib  sym-lib-table
pcb/main_board/project_footprints.pretty/: Black_pill.kicad_mod  ESP01.kicad_mod  HC_05.kicad_mod
pcb/sensors_board/: sensors_board-cache.lib  sensors_board.kicad_pcb  sensors_board.kicad_pcb-bak  sensors_board.net  sensors_board.pro  sensors_board.sch
sw/: example_source.c  header_template.h
sw/SmartHomeTypes/: CMakeLists.txt
sw/SmartHomeTypes/include/: env_types.h  fan_types.h  inputs_types.h  relays_types.h  stairs_led_types.h
sw/boards/: CMakeLists.txt
sw/boards/include/: inputs_board.h  inputs_interrupt_handler.h  relays_board.h
sw/boards/source/: inputs_board.c  inputs_interrupt_handler.c  relays_board.c
sw/boards/test/: CMakeLists.txt
sw/boards/test/mocks/: inputs_board_mock.h  relays_board_mock.h
sw/boards/test/unit/: inputs_board_tests.cpp  relays_board_tests.cpp
sw/command_parser/: CMakeLists.txt
sw/command_parser/include/: command_parser.h
sw/command_parser/source/: command_parser.c
sw/command_parser/test/: CMakeLists.txt
sw/command_parser/test/unit/: command_parser_tests.cpp
sw/config/: system_config_values.h
sw/drivers/: CMakeLists.txt
sw/drivers/include/: bt_engine.h  dht_driver.h  i2c_driver.h  test.h  uart_engine.h  wifi_driver.h  wifi_manager.h
sw/drivers/source/: bt_engine.c  dht_driver.c  gpio_lib.c  i2c_driver.c  test.c  uart_engine.c  wifi_driver.c  wifi_manager.c
sw/drivers/test/: CMakeLists.txt
sw/drivers/test/mocks/: btengine_mock.h  dht_driver_mock.h  gpio_lib_mock.h  i2c_driver_mock.h  uartengine_mock.h  wifidriver_mock.h  wifimanager_mock.h
sw/drivers/test/unit/: bt_engine_tests.cpp  dht_driver_tests.cpp  i2c_driver_tests.cpp  test_tests.cpp  uart_engine_tests.cpp  wifi_driver_tests.cpp  wifi_manager_tests.cpp
sw/env_monitor/: CMakeLists.txt
sw/env_monitor/include/: bathroom_fan.h  env_monitor.h
sw/env_monitor/source/: bathroom_fan.c  env_monitor.c
sw/env_monitor/test/: CMakeLists.txt
sw/env_monitor/test/mocks/: bathroom_fan_mock.h  env_monitor_mock.h
sw/env_monitor/test/unit/: bathroom_fan_tests.cpp  env_monitor_tests.cpp
sw/example_module/include/: header_template.h
sw/gpio_lib/: CMakeLists.txt  gpio_lib.c  gpio_lib.h
sw/gpio_lib/include/: gpio_lib.h
sw/gpio_lib/test/: CMakeLists.txt
sw/logger/: CMakeLists.txt
sw/logger/include/: Logger.h  uart_engine.h
sw/logger/source/: Logger.c  uart_engine.c
sw/logger/test/: CMakeLists.txt
sw/logger/test/mocks/: logger_mock.h
sw/logger/test/unit/: logger_tests.cpp  uart_engine_tests.cpp
sw/notification_manager/: CMakeLists.txt
sw/notification_manager/include/: notification_manager.h
sw/notification_manager/source/: notification_manager.c
sw/notification_manager/test/: CMakeLists.txt
sw/notification_manager/test/unit/: notification_manager_tests.cpp
sw/notification_module/include/: notification_module.h
sw/simulation/: CMakeLists.txt  temp_main.c
sw/simulation/include/: hw_stub.h  simulation_settings.h  socket_driver.h
sw/simulation/source/: bt_engine_sim.c  dht_driver_sim.c  hw_stub.c  i2c_driver_sim.c  logger_sim.c  socket_driver.c  system_timestamp_sim.c  time_counter_sim.c  wifi_driver_sim.c
sw/simulation/tests/: CMakeLists.txt
sw/simulation/tests/mocks/: socket_driver_mock.h
sw/simulation/tests/unit/: dht_driver_sim_tests.cpp  hw_stub_tests.cpp  i2c_driver_sim_tests.cpp  socket_driver_tests.cpp
sw/stairs_module/: CMakeLists.txt
sw/stairs_module/include/: stairs_led_module.h
sw/stairs_module/source/: stairs_led_module.c
sw/stairs_module/test/: CMakeLists.txt
sw/stairs_module/test/mocks/: stairs_led_module_mock.h
sw/stairs_module/test/unit/: stairs_led_module_tests.cpp
sw/task_scheduler/: CMakeLists.txt
sw/task_scheduler/include/: task_scheduler.h
sw/task_scheduler/source/: task_scheduler.c
sw/task_scheduler/test/: CMakeLists.txt
sw/task_scheduler/test/mocks/: task_scheduler_mock.h
sw/task_scheduler/test/unit/: task_scheduler_tests.cpp
sw/time/: CMakeLists.txt
sw/time/include/: system_timestamp.h  time_counter.h
sw/time/source/: system_timestamp.c  time_counter.c
sw/time/test/: CMakeLists.txt
sw/time/test/mocks/: system_timestamp_mock.h  time_counter_mock.h
sw/time/test/unit/: system_timestamp_tests.cpp  time_counter_tests.cpp
sw/utilities/: CMakeLists.txt
sw/utilities/include/: list_generic.h  return_codes.h  string_formatter.h  system_settings.h
sw/utilities/source/: list_generic.c  string_formatter.c
sw/utilities/test/: CMakeLists.txt
sw/utilities/test/unit/: list_generic_tests.cpp  string_formatter_tests.cpp
